--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,3 +106,26 @@ header {
     max-width: 100%;
     padding: 10px;
   }
+  footer {
+    margin-top: 5%;
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+  }
+  
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .right-container a {
+    color: #fff;
+    margin-left: 20px;
+  }
+  
+  .left-container img {
+    height: 80px;
+    width: auto;
+  }
+  
