--- a/css/style.css
+++ b/css/style.css
@@ -16,17 +16,27 @@
     padding: 10px;
   }
   footer {
-    margin-top: 5%;
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-  }
-  
-  .footer-container {
+    margin: 1%;
+    height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    padding: 0 20px;
   }
+  header {
+    margin: 1%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    padding: 0 20px;
+  }
+  
+
   
   .right-container a {
     color: #fff;
@@ -40,18 +50,13 @@
   .search-icon {
     display: none;
   }
-  header {
-    margin: 1%;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    padding: 0 20px;
-  }
+  
   
   .logo img {
+    height: 80px;
+    width: auto;
+  }
+  .left-container img {
     height: 80px;
     width: auto;
   }
@@ -66,6 +71,11 @@
     list-style: none;
     margin: 0;
     padding: 0;
+  }
+  .right-container a {
+    color: #333;
+    text-decoration: none;
+    font-size: 18px;
   }
   
   nav li {
@@ -139,6 +149,46 @@
     color: gray;
   }
   
+  .cutoff-text {
+    --max-lines: 3;
+    --line-height: 1.8;
+    max-height: calc(var(--max-lines) * 1em * var(--line-height));
+    line-height: var(--line-height );
+    
+    overflow: hidden;
+    position: relative;
+  }
+  .cutoff-text::before {
+    content: '';
+    position: absolute;
+    height: calc(1em * var(--line-height));
+    width: 100%;
+    bottom: 0;
+    pointer-events: none;
+    background: linear-gradient(to bottom, transparent, white) ;
+  }
+  .expand-btn {
+    appearance: none;
+    float: right;
+    border: 1px solid #000;
+    padding: .2em;
+    border-radius: .25em;
+    cursor: pointer;
+    /* margin-top: 1rem; */
+  } 
+  .expand-btn:hover {
+    background-color: #ccc;
+  }
+  .expand-btn::before {
+    content: "Expandir";
+  }
+  .expand-btn:checked::before {
+    content: "Collapse";
+  }
+  .cutoff-text:has(+ .expand-btn:checked) {
+    max-height: none;
+  }
+
   @media only screen and (max-width: 600px) {
     #img1 {display: none;}
     #img2 {display: block;}
@@ -146,7 +196,9 @@
     .search-wrapper {
       display: none;
     }
-  
+    footer {
+      height: auto;
+    }
     /* Show the search icon */
     .search-icon {
       display: flex;
@@ -155,8 +207,13 @@
         height: 60px;
         width: auto;
     }
+    .left-container img{
+      height: 60px;
+      width: auto;
+    }
     header {
         height: auto;
     }
+    
   }
   
